2007-08-02  George Giolfan  <georgegiolfan@yahoo.com>

	* Slider.cs: Switched to implemented *EventArgs types.

2007-08-01  George Giolfan  <georgegiolfan@yahoo.com>

	* ContentControl.cs: Added.

2007-07-30  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewBox.cs: Fixed StretchDirection handling.

2007-07-30  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewBox.cs: Some more fixes.

2007-07-29  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewBox.cs: Some layout fixes.

2007-07-29  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewBox.cs: Fixed MeasureOverride.

2007-07-29  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewBox.cs: More work.

2007-07-28  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewBox.cs: Implemented VisualChildrenCount.

2007-07-28  George Giolfan  <georgegiolfan@yahoo.com>

	* ViewBox.cs: Added.

2007-07-28  George Giolfan  <georgegiolfan@yahoo.com>

	* HeaderedContentControl.cs: Added.

2007-07-28  George Giolfan  <georgegiolfan@yahoo.com>

	* Image.cs: Fixed the ImageFailed declaration. I will probably not be able to implement this. I just noticed it implements a private interface called System.Windows.Markup.IProvidePropertyFallback (likely to enable XAML like <Image Source="<file name"/>).

2007-07-28  George Giolfan  <georgegiolfan@yahoo.com>

	* Image.cs: Fixed ArrangeOverride.

2007-07-28  George Giolfan  <georgegiolfan@yahoo.com>

	* Image.cs: Some more work.

2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Image.cs: Cleaned up OnRender.

2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Image.cs: Improved MeasureOverride.

2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>

	* Image.cs: Improved layout a little.

2007-07-25  George Giolfan  <georgegiolfan@yahoo.com>

	* Image.cs: Improved layout a little.

2007-07-24  George Giolfan  <georgegiolfan@yahoo.com>

	* Image.cs: Added (stubs).

2007-07-23  George Giolfan  <georgegiolfan@yahoo.com>

	* GroupBox.cs: Added (access key feature does not work).
