@@ -82,6 +82,7 @@
     <Compile Include="System.Windows.Controls\ContextMenuEventArgs.cs" />
     <Compile Include="System.Windows.Controls\ColumnDefinitionCollection.cs" />
     <Compile Include="System.Windows.Controls\ContentControl.cs" />
+    <Compile Include="System.Windows.Controls\Decorator.cs" />
     <Compile Include="System.Windows.Controls\GroupBox.cs" />
     <Compile Include="System.Windows.Controls\HeaderedContentControl.cs" />
     <Compile Include="System.Windows.Controls\Image.cs" />
